syntax = "proto2";

package amarlon;

message DropRule {
  required int32 actor_id = 1;
  required int32 min = 2;
  required int32 max = 3;
  required float chance = 4;
}